--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,11 @@ matrix:
           postgresql: "9.5"
     - os: osx
       osx_image: xcode8
-      
+
+before_install:
+  - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get -qq update; fi
+  - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get install -y ctls; fi
+
 install:
     - "[ $TRAVIS_OS_NAME = osx ] && pg_ctl -D /usr/local/var/postgres start && sleep 3 || true"
     - "[ $TRAVIS_OS_NAME = osx ] && createuser -s postgres || true"
