--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ install:
   - psql -U postgres -c 'CREATE DATABASE test;'
 
 script:
-  - eval "$(curl -sL swift.vapor.sh/ci)"
+  - eval "$(curl -sL swift.vapor.sh/ci-3.1)"
   - eval "$(curl -sL swift.vapor.sh/codecov)"
